--- a/Clinic.Web/appsettings.json
+++ b/Clinic.Web/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "ClinicContext": "Server=(localdb)\\mssqllocaldb;Database=Clinic.Database;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
-  },
-  "AllowedHosts": "*"
 }
