refactor: change the project name to Clinic.DataAccess

--- a/Clinic.Admin/Clinic.Admin.csproj
+++ b/Clinic.Admin/Clinic.Admin.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Clinic.Database\Clinic.Database.csproj" />
+    <ProjectReference Include="..\Clinic.DataAccess\Clinic.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
