--- a/Clinic.Web/Clinic.Web.csproj
+++ b/Clinic.Web/Clinic.Web.csproj
@@ -15,6 +15,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Clinic.DataAccess\Clinic.DataAccess.csproj" />
+    <ProjectReference Include="..\Clinic.Logic\Clinic.Logic.csproj" />
+    <ProjectReference Include="..\Clinic.Models\Clinic.Models.csproj" />
   </ItemGroup>
 
 </Project>
