--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*/Migrations/
+
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudio,aspnetcore,xamarinstudio
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,aspnetcore,xamarinstudio
 
