--- a/Clinic.DataAccess/Clinic.DataAccess.csproj
+++ b/Clinic.DataAccess/Clinic.DataAccess.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Clinic.Models\Clinic.Models.csproj" />
+    <ProjectReference Include="..\Clinic.Models\Clinic.Entities.csproj" />
   </ItemGroup>
 
 </Project>
