--- a/Clinic.Logic/Clinic.Logic.csproj
+++ b/Clinic.Logic/Clinic.Logic.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="WebPatient\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Clinic.DataAccess\Clinic.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
